backend/output.txt
    Checking poool-backend v0.1.0 (/Users/martin/Projects/poool/backend)
error[E0063]: missing field `funding_status` in initializer of `SecondaryAsset`
   --> src/marketplace/service.rs:744:22
    |
744 |         results.push(super::models::SecondaryAsset {
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `funding_status`

warning: unused import: `redis::AsyncCommands`
   --> src/community/user_bridge.rs:160:21
    |
160 |                 use redis::AsyncCommands;
    |                     ^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `is_completed` is never read
  --> src/community/challenges.rs:97:13
   |
97 |             is_completed = true;
   |             ^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `only_following_user_id`
   --> src/community/routes.rs:260:9
    |
260 |     let only_following_user_id: Option<Uuid> = None; // not constrained by following
    |         ^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_only_following_user_id`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `user`
    --> src/community/routes.rs:1721:9
     |
1721 |     let user = middleware::get_current_user(&jar, &state.db).await;
     |         ^^^^ help: if this is intentional, prefix it with an underscore: `_user`

warning: unused variable: `q`
    --> src/community/routes.rs:2510:26
     |
2510 |     axum::extract::Query(q): axum::extract::Query<std::collections::HashMap<String, String>>,
     |                          ^ help: if this is intentional, prefix it with an underscore: `_q`

warning: unused variable: `core_pool`
  --> src/community/background.rs:18:42
   |
18 | async fn check_velocity(c_pool: &PgPool, core_pool: &PgPool) -> Result<(), crate::error::AppError> {
   |                                          ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_core_pool`

For more information about this error, try `rustc --explain E0063`.
warning: `poool-backend` (bin "poool-backend") generated 6 warnings
error: could not compile `poool-backend` (bin "poool-backend") due to 1 previous error; 6 warnings emitted
